Fix: Increase spacing between source record links for accessibility

--- a/static/css/components/work.less
+++ b/static/css/components/work.less
@@ -321,3 +321,9 @@ div.editionTools {
 
 @import (less) "components/check-in.less";
 @import (less) "components/work-title-and-author.less";
+
+// Add the new CSS rules here
+.source-records {
+  word-spacing: 1px;
+  line-height: 1.75;
+}
